完成从挂件迁移

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,10 @@
     "references": [
         {
             "path": "./tsconfig.node.json"
+        },
+        {
+          "path": "./tsconfig.app.json"
         }
     ],
-    "root": "."
+    "root": ".",
 }
