--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,8 +47,12 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: pnpm install
-
-      # Build for production, 这一步会生成一个 package.zip
+      
+        # 子模块  
+      - name: Update Submodule
+        run: git submodule update --init --recursive
+      
+        # Build for production, 这一步会生成一个 package.zip
       - name: Build for production
         run: pnpm build
 
