--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,11 +47,13 @@ jobs:
       # Install dependencies
       - name: Install dependencies
         run: pnpm install
-      
-        # 子模块  
+
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        # 子模块
       - name: Update Submodule
         run: git submodule update --init --recursive
-      
+
         # Build for production, 这一步会生成一个 package.zip
       - name: Build for production
         run: pnpm build
