SelectTag优化，action删除重复鉴权，vue导入修正

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,11 @@ jobs:
         # Build for production, 这一步会生成一个 package.zip
       - name: Build for production
         run: pnpm build
-
+      
+      # github action的设置中需要以下权限
+        # Workflow permissions
+          # ✔ Read and write permissions 
+          # ✔ Allow GitHub Actions to create and approve pull requests
       - name: Release
         uses: ncipollo/release-action@v1
         with:
