--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "siyuan-plugin-table-view",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
-  "description": "This is a sample plugin based on vite and svelte for Siyuan (https://b3log.org/siyuan)",
+  "description": "抽取笔记内容生成表格，汇总概念及其属性",
   "repository": "",
   "homepage": "",
   "author": "",
