--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "siyuan-plugin-table-view",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "type": "module",
   "description": "抽取笔记内容生成表格，汇总概念及其属性",
   "repository": "",
@@ -12,7 +12,7 @@
     "dev": "vite build --watch",
     "build": "vite build",
     "commit": "git add . && git cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s  && echo WARN: 修改版本号后再添加标签"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s  && echo WARN: 注意修改plugin.json中版本号再添加标签"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
