feat: 指定块时，输入如‘# 一级标题’形式将仅在标题块中搜索

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/siyuanPlugin-common"]
 	path = lib/siyuanPlugin-common
 	url = https://github.com/etchnight/siyuanPlugin-common.git
+[submodule "lib/js-utility-function"]
+	path = lib/js-utility-function
+	url = https://github.com/etchnight/js-utility-function.git
